RESOLVED FIXED314951
[Site Isolation] NetworkProcess::m_allowedFirstPartiesForCookies not restored for subframe processes after crash
https://bugs.webkit.org/show_bug.cgi?id=314951
Summary [Site Isolation] NetworkProcess::m_allowedFirstPartiesForCookies not restored...
Sihui Liu
Reported 2026-05-16 10:33:02 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-16 10:35:28 PDT
Sihui Liu
Comment 2 2026-05-16 10:45:50 PDT
EWS
Comment 3 2026-05-19 09:35:44 PDT
Committed 313490@main (cd11ac52dbc4): <https://commits.webkit.org/313490@main> Reviewed commits have been landed. Closing PR #65043 and removing active labels.
Claudio Saavedra
Comment 4 2026-07-07 06:04:35 PDT
EWS
Comment 5 2026-07-07 07:22:35 PDT
Committed 305877.964@webkitglib/2.52 (f6c0b734bc64): <https://commits.webkit.org/305877.964@webkitglib/2.52> Reviewed commits have been landed. Closing PR #68833 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.