Source/WebKit/NetworkProcess/NetworkProcessCreationParameters.h
@@ -83,7 +83,6 @@ struct NetworkProcessCreationParameters {
     bool enableEnhancedSecurityLinks { false };
 #endif
     Vector<WebsiteDataStoreParameters> websiteDataStoreParameters;
-    Vector<std::pair<WebCore::ProcessIdentifier, WebCore::RegistrableDomain>> allowedFirstPartiesForCookies;
     HashMap<WebCore::ProcessIdentifier, Vector<String>> allowedFilePaths;
     HashSet<String> localhostAliasesForTesting;
     Vector<WebCore::OrganizationStorageAccessPromptQuirk> storageAccessPromptQuirksData;
